Leave floated list-items as display:list-item. b=32200, r=buster sr=waterson